# bitbucketdc-cli

./: AGENTS.md  README.md  pyproject.toml
bbdc_cli/: __main__.py
docs/: CLI.md  coverage.md  examples.md
resources/: 10.0.swagger.v3.json  bitbucketserver.1000.postman.txt
